--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-WTForms~=2.3.3
-SQLAlchemy~=1.4.5
-Werkzeug~=1.0.1
-Flask~=1.1.2
-requests~=2.25.1
+email-validator==1.1.2
+Flask==1.1.2
+Flask-Login==0.5.0
+flask-ngrok==0.0.25
+Flask-RESTful==0.3.8
+Flask-WTF==0.14.3
+Jinja2==2.11.2
+jsonschema==3.2.0
+login==0.0.6
+SQLAlchemy==1.4.5
+SQLAlchemy-serializer==1.3.4.4
+Werkzeug==1.0.1
+WTForms==2.3.3
